--- a/client/src/style/canvas.css
+++ b/client/src/style/canvas.css
@@ -3,18 +3,33 @@
 */
 
 .canvasContainer {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-top: 30px;
-  background-color: blue; /* Development*/
+  /* justify-content: center; */
+  flex-direction: column;
 }
 
 .canvas {
   height: 300px;
   width: 300px;
   background-color: white;
+  margin-top: 80px;
 }
+
+/* --Mobile Bttn -- */
+.mobilBttn {
+  flex-grow: 1;
+  width: 100%;
+}
+
+.mobilBttn > img {
+  position: absolute;
+  right: 30px;
+  bottom: 30px;
+}
+/* --Mobile Bttn -- */
 
 /*
 * Small devices (small devices, 425px and up)
