--- a/client/src/style/sideBar.css
+++ b/client/src/style/sideBar.css
@@ -1,12 +1,35 @@
 .sideBarContainer {
-  display: none;
-  background-color: #000000;
+  display: flex;
+  height: 100%;
+  width: 0; /*280px*/
   position: absolute;
-  top: 60px; /* The height of the NavBar*/
-  bottom: 0px;
-  width: 90px;
+  transition: 0.5s;
 }
 
+.sideBarFirst {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  width: 0px; /*100px*/
+  background-color: blue;
+  height: 100%;
+  overflow-x: hidden;
+  /* transition: 0.5s; */
+  /* position: absolute; */
+}
+
+.sideBarSecond {
+  color: white;
+  width: 0; /*180px*/
+  background-color: teal;
+  overflow-x: hidden;
+  /* transition: 0.5s; */
+}
+
+.closeSideBar {
+  background-color: rgba(0, 0, 0, 0.4);
+  flex-grow: 0;
+}
 /*
 * Small devices (small devices, 425px and up)
 */
@@ -19,6 +42,9 @@
 * Small devices (landscape phones, 576px and up)
 */
 @media (min-width: 576px) {
+  .sideBarContainer {
+    /* display: flex; */
+  }
 }
 
 /**
@@ -26,6 +52,6 @@
 */
 @media (min-width: 768px) {
   .sideBarContainer {
-    display: flex;
+    /* display: flex; */
   }
 }
