--- a/client/src/style/canvas.css
+++ b/client/src/style/canvas.css
@@ -3,12 +3,13 @@
 */
 
 .canvasContainer {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   display: flex;
   align-items: center;
   /* justify-content: center; */
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .canvas {
@@ -56,5 +57,9 @@
 */
 @media (min-width: 768px) {
   .canvas {
+  }
+
+  .mobilBttn {
+    display: none;
   }
 }
