--- a/client/src/style/canvas.css
+++ b/client/src/style/canvas.css
@@ -1,13 +1,10 @@
 /*
 * Style for the canvas component
 */
-
 .canvasContainer {
-  /* width: 100%; */
   height: 100%;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
   flex-direction: column;
   flex-grow: 1;
 }
@@ -16,7 +13,7 @@
   height: 300px;
   width: 300px;
   background-color: white;
-  margin-top: 80px;
+  margin-top: 20px;
 }
 
 /* --Mobile Bttn -- */
@@ -31,6 +28,61 @@
   bottom: 30px;
 }
 /* --Mobile Bttn -- */
+
+/* ---Record Section---- */
+.recordBttn {
+  margin-top: 20px;
+}
+/* ---Record Section---- */
+
+/* ---Reset Bttn Mobile--- */
+
+.resetBttnMobile {
+  margin-top: 20px;
+}
+.resetBttnMobile > button {
+  background-color: #55595c;
+  border: none;
+  padding: 10px 70px;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 4px;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+}
+/* ---Reset Bttn Mobile--- */
+
+/*
+* Small devices (Galazy S5 or Iphone 5/SE )
+*/
+@media (min-width: 320px) and (max-height: 640px) {
+  .canvas {
+  }
+
+  .mobilBttn {
+  }
+
+  .mobilBttn > img {
+    right: 10px;
+    bottom: 10px;
+    width: 60px;
+    height: 60px;
+  }
+  .recordBttn {
+  }
+
+  .recordBttn > img {
+    width: 80px;
+    height: 80px;
+  }
+  .resetBttnMobile {
+    margin-top: 10px;
+  }
+  .resetBttnMobile > button {
+    padding: 10px 40px;
+  }
+}
 
 /*
 * Small devices (small devices, 425px and up)
@@ -50,6 +102,10 @@
     width: 500px;
     height: 500px;
   }
+
+  .resetBttnMobile {
+    display: none;
+  }
 }
 
 /**
@@ -61,5 +117,55 @@
 
   .mobilBttn {
     display: none;
+  }
+}
+
+/**
+* Large devices (desktops, 992px and up)
+*/
+@media (min-width: 992px) {
+  .canvas {
+    width: 550px;
+    height: 550px;
+    margin-top: 30px;
+  }
+}
+
+/*
+* Devices 1024px 750px. Example: Notebook 10"
+*/
+@media (min-width: 1024px) and (max-height: 750px) {
+  .canvas {
+    width: 400px;
+    height: 400px;
+  }
+}
+/**
+* Extra large devices (large desktops, 1200px and up)
+*/
+@media (min-width: 1200px) {
+  .canvas {
+    width: 600px;
+    height: 600px;
+  }
+}
+
+/*
+* Devices 1280px 768px. Example: Notebook 13"
+*/
+@media (min-width: 1280px) and (max-height: 768px) {
+  .canvas {
+    width: 500px;
+    height: 500px;
+  }
+}
+
+/*
+* Devices 1024px 750px. Example: Notebook 10"
+*/
+@media (min-width: 1366px) and (max-height: 768px) {
+  .canvas {
+    width: 500px;
+    height: 500px;
   }
 }
