--- a/client/src/style/canvas.css
+++ b/client/src/style/canvas.css
@@ -10,8 +10,8 @@
 }
 
 .canvas {
-  height: 300px;
-  width: 300px;
+  /* height: 300px;
+  width: 300px; */
   background-color: white;
   margin-top: 20px;
 }
@@ -89,8 +89,8 @@
 */
 @media (min-width: 425px) {
   .canvas {
-    width: 350px;
-    height: 350px;
+    /* width: 350px;
+    height: 350px; */
   }
 }
 
@@ -99,8 +99,8 @@
 */
 @media (min-width: 576px) {
   .canvas {
-    width: 500px;
-    height: 500px;
+    /* width: 500px;
+    height: 500px; */
   }
 
   .resetBttnMobile {
@@ -125,8 +125,8 @@
 */
 @media (min-width: 992px) {
   .canvas {
-    width: 550px;
-    height: 550px;
+    /* width: 550px;
+    height: 550px; */
     margin-top: 30px;
   }
 }
@@ -136,8 +136,8 @@
 */
 @media (min-width: 1024px) and (max-height: 750px) {
   .canvas {
-    width: 400px;
-    height: 400px;
+    /* width: 400px;
+    height: 400px; */
   }
 }
 /**
@@ -145,8 +145,8 @@
 */
 @media (min-width: 1200px) {
   .canvas {
-    width: 600px;
-    height: 600px;
+    /* width: 600px;
+    height: 600px; */
   }
 }
 
@@ -155,8 +155,8 @@
 */
 @media (min-width: 1280px) and (max-height: 768px) {
   .canvas {
-    width: 500px;
-    height: 500px;
+    /* width: 500px;
+    height: 500px; */
   }
 }
 
@@ -165,7 +165,7 @@
 */
 @media (min-width: 1366px) and (max-height: 768px) {
   .canvas {
-    width: 500px;
-    height: 500px;
+    /* width: 500px;
+    height: 500px; */
   }
 }
