--- a/client/src/style/sideBar.css
+++ b/client/src/style/sideBar.css
@@ -4,6 +4,7 @@
   width: 100%; /*280px*/
   position: absolute;
   transition: 0.5s;
+  font-size: 10px;
 }
 
 .sideBarFirst {
@@ -11,15 +12,15 @@
   flex-direction: column;
   color: white;
   width: 100px; /*100px*/
-  background-color: blue;
+  background-color: #000000;
   height: 100%;
   overflow-x: hidden;
 }
 
 .sideBarSecond {
   color: white;
-  width: 180; /*180px*/
-  background-color: teal;
+  width: 180px; /*180px*/
+  background-color: black;
   overflow-x: hidden;
 }
 
@@ -27,6 +28,31 @@
   background-color: rgba(0, 0, 0, 0.4);
   flex-grow: 1;
 }
+
+/***Sidebar options***/
+.sideBarSelection {
+  display: flex;
+  align-items: center;
+  height: 60px;
+  padding-left: 5px;
+}
+
+.sideBarSelection:hover {
+  background-color: #434e5e;
+}
+/***Sidebar options***/
+
+/***Sidebar close bttn***/
+.sideBarCloseDesk {
+  display: none;
+}
+.sideBarClosebttn {
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+}
+/***Sidebar close bttn***/
+
 /*
 * Small devices (small devices, 425px and up)
 */
@@ -55,6 +81,7 @@
     display: flex;
     position: relative;
     width: auto;
+    font-size: 12px;
   }
 
   .sideBarSecond {
@@ -63,5 +90,13 @@
 
   .closeSideBar {
     display: none;
+  }
+
+  .sideBarCloseDesk {
+    display: flex;
+  }
+
+  .sideBarSelection {
+    padding-left: 10px;
   }
 }
