--- a/client/src/style/backgroundSideBar.css
+++ b/client/src/style/backgroundSideBar.css
@@ -2,4 +2,12 @@
   width: 100%;
   height: 100%;
   background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+
+.backSBTitle {
+  font-size: 15px;
 }
