--- a/client/src/style/soundwaveColorBar.css
+++ b/client/src/style/soundwaveColorBar.css
@@ -2,4 +2,11 @@
   width: 100%;
   height: 100%;
   background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+.swbarTitle {
+  font-size: 15px;
 }
