--- a/client/src/style/soundwaveThickBar.css
+++ b/client/src/style/soundwaveThickBar.css
@@ -2,4 +2,16 @@
   width: 100%;
   height: 100%;
   background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+
+.swThickBarTitle {
+  font-size: 15px;
+}
+
+.swThickBarSliCon {
+  margin-top: 10px;
 }
