--- a/client/src/style/soundwaveWidthBar.css
+++ b/client/src/style/soundwaveWidthBar.css
@@ -2,4 +2,16 @@
   width: 100%;
   height: 100%;
   background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+
+.swWidthkBarTitle {
+  font-size: 15px;
+}
+
+.swWidthBarSliCon {
+  margin-top: 10px;
 }
