--- a/client/src/style/canvas.css
+++ b/client/src/style/canvas.css
@@ -10,9 +10,10 @@
 }
 
 .canvas {
-  /* height: 300px;
-  width: 300px; */
   background-color: white;
+}
+.canvasSection {
+  position: relative;
   margin-top: 20px;
 }
 
@@ -75,6 +76,24 @@
   }
 }
 
+/*---Input Text ---*/
+.inputTextCanvas {
+  /* background-color: red; */
+  position: absolute;
+  left: 0;
+  cursor: move;
+  border-width: 0;
+  height: 20px;
+  padding-left: 3px;
+}
+
+.inputTextCanvas:focus {
+  outline-width: 3px;
+  outline-color: #9cb6ea;
+  outline-style: solid;
+}
+/*---Input Text ---*/
+
 /*
 * Small devices (small devices, 425px and up)
 */
@@ -103,7 +122,7 @@
 * Large devices (desktops, 992px and up)
 */
 @media (min-width: 992px) {
-  .canvas {
+  .canvasSection {
     margin-top: 30px;
   }
 }
