--- a/client/src/style/colorPicker.css
+++ b/client/src/style/colorPicker.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   color: white;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 .colorPickerlist {
