--- a/client/src/style/textBar.css
+++ b/client/src/style/textBar.css
@@ -3,3 +3,97 @@
   height: 100%;
   background-color: #000000;
 }
+
+.textBar {
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+.textBarTitle {
+  font-size: 15px;
+}
+
+.txtBarBdyTxt {
+  cursor: pointer;
+  margin-top: 10px;
+  height: 50px;
+  background-color: rgb(56, 63, 71);
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+
+.ftSelConIn {
+  display: inline-flex;
+  height: 28px;
+}
+
+.ftSelConIn > input {
+  width: 40px;
+  /* height: 28px; */
+  border-width: 0;
+  border-radius: 5px 0 0 5px;
+  text-align: center;
+}
+
+.ftSelConIn > input:hover {
+  background-color: #dbdcdd;
+}
+
+/* Chrome, Safari, Edge, Opera */
+.ftSelConIn > input::-webkit-outer-spin-button,
+.ftSelConIn > input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.ftSelConIn > input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+.ftSelConInIm {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0 5px 5px 0;
+  width: 30px;
+  cursor: pointer;
+}
+
+.ftSelConInIm:hover {
+  background-color: #dbdcdd;
+}
+
+.ftSelConInIm > img {
+  width: 15px;
+  height: 15px;
+}
+
+.ftSelCtnDrpDwn {
+  display: none;
+  color: black;
+  background-color: white;
+  overflow: auto;
+  height: 150px;
+  border-radius: 5px 0 0 5px;
+  margin-top: 2px;
+}
+.ftSelCtnDrpDwn > ul {
+  list-style: none;
+}
+
+.ftSelCtnDrpDwn > ul > li {
+  line-height: 30px;
+  padding-left: 10px;
+}
+
+.ftSelCtnDrpDwn > ul > :hover {
+  background-color: #dbdcdd;
+}
