--- a/client/src/style/canvas.css
+++ b/client/src/style/canvas.css
@@ -79,9 +79,15 @@
 
 /*---Input Text ---*/
 .inputTextCanvas {
-  /* background-color: red; */
   position: absolute;
-  left: 0;
+  left: 45%;
+  top: 45%;
+  background-color: transparent;
+  /* right: 0; */
+  /* margin-left: auto;
+  margin-right: auto; */
+  /* top: 50%;
+  margin-top: -7.5px; */
   cursor: move;
   border-width: 0;
   height: 20px;
