--- a/client/src/style/navBar.css
+++ b/client/src/style/navBar.css
@@ -17,6 +17,8 @@
 .navBarBttn {
   display: none;
   margin-right: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
 }
 
 .navBarBttn > button {
@@ -27,6 +29,55 @@
   cursor: pointer;
   border-radius: 4px;
   color: white;
+  margin-right: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+.navBarBttn > .bttnEffect {
+  background-color: #55595c;
+  border: none;
+  padding: 10px 50px;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 4px;
+  color: white;
+  overflow: hidden;
+  position: relative;
+}
+
+.navBarBttn > .bttnEffect p {
+  position: relative;
+  transition: all 0.45s ease-Out;
+}
+
+.bttnSend {
+  margin-left: 15px;
+}
+#spinAnim {
+  width: 0;
+  height: 0;
+  opacity: 0;
+  left: 70px;
+  top: 20px;
+  transform: rotate(0deg);
+  background: none;
+  position: absolute;
+  transition: all 0.5s ease-Out;
+}
+
+.navBarBttn > .bttnEffect:hover #spinAnim {
+  width: 200%;
+  height: 500%;
+  opacity: 1;
+  left: -75px;
+  top: -70px;
+  background: #ffffff;
+  transform: rotate(80deg);
+}
+
+.navBarBttn > .bttnEffect:hover p {
+  color: #2d3142;
 }
 
 /*
