--- a/client/src/style/sendForm.css
+++ b/client/src/style/sendForm.css
@@ -47,7 +47,7 @@
   justify-content: space-around;
 }
 
-.sendCanvFormBdy > div > input[type="text"] {
+.sendCanvFormBdy > div > input[type="email"] {
   width: 100%;
   height: 35px;
   padding: 5px 15px;
@@ -70,9 +70,11 @@
   padding: 15px 10px;
 }
 
-.sendCvaFrmFttr > a {
+.sendCvaFrmFttr > a,
+.sendCvaFrmFttr > input {
   display: inline-block;
-  height: 40px;
+  /* height: 40px; */
+  font-family: inherit;
   line-height: 40px;
   border: none;
   border-radius: 5px;
